# na-online_ow-toolbox

./: .hgignore  AUTHORS  CMakeCache.txt  CONTRIBUTORS  README.md  VERSION
src/core/: CMakeLists.txt  _DOC_.h
src/core/common/: WLTimeProfiler.cpp  WLTimeProfiler.h
src/core/container/: WLArrayList.cpp  WLArrayList.h  WLList.cpp  WLList.h  WLRingBuffer.cpp  WLRingBuffer.h  WLSet.cpp  WLSet.h  _DOC_.h
src/core/daqSystem/: WLDaqNeuromag.cpp  WLDaqNeuromag.h
src/core/data/: README  WLDataSetEMM.cpp  WLDataSetEMM.h  WLDataTypes.cpp  WLDataTypes.h  WLDigPoint.cpp  WLDigPoint.h  WLEMMBemBoundary.cpp  WLEMMBemBoundary.h  WLEMMCommand.cpp  WLEMMCommand.h  WLEMMEnumTypes.cpp  WLEMMEnumTypes.h  WLEMMHpiInfo.cpp  WLEMMHpiInfo.h  WLEMMSubject.cpp  WLEMMSubject.h  WLEMMSurface.cpp  WLEMMSurface.h  WLEMMeasurement.cpp  WLEMMeasurement.h  WLMatrixTypes.cpp  WLMegCoilInfo.cpp  WLMegCoilInfo.h  WLPositions.cpp  WLPositions.h  WLTransformation.cpp  WLTransformation.h  _DOC_.h
src/core/dataFormat/: _DOC_.h
src/core/dataHandler/: WDataSetEMM.cpp  WDataSetEMM.h  WDataSetEMMBemBoundary.cpp  WDataSetEMMBemBoundary.h  WDataSetEMMECG.cpp  WDataSetEMMECG.h  WDataSetEMMEEG.cpp  WDataSetEMMEEG.h  WDataSetEMMEMD.cpp  WDataSetEMMEMD.h  WDataSetEMMEOG.cpp  WDataSetEMMEOG.h  WDataSetEMMEnumTypes.cpp  WDataSetEMMEnumTypes.h  WDataSetEMMMEG.cpp  WDataSetEMMMEG.h  WDataSetEMMPCA.cpp  WDataSetEMMPCA.h  WDataSetEMMSource.cpp  WDataSetEMMSource.h  WDataSetEMMSubject.cpp  WDataSetEMMSubject.h  WDataSetEMMSurface.cpp  WDataSetEMMSurface.h  WLBoundCalculator.h
src/core/exception/: WLBadAllocException.cpp  WLBadAllocException.h  WLNoDataException.cpp  WLNoDataException.h  _DOC_.h
src/core/graphicsEngine/: WLColorMap.cpp  WLColorMapClassic.h  WLColorMapHSV.cpp  WLColorMapHSV.h  WLColorMapHot.cpp
src/core/gui/: _DOC_.h
src/core/io/: WLIOStatus.cpp  WLIOStatus.h  WLMatFileIO.cpp  WLMatFileIO.h  WLMatFileIO_MATReader.cpp  WLMatFileIO_MATWriter.cpp  WLReader.cpp  WLReader.h  WLReaderBND.cpp  WLReaderBND.h  WLReaderBem.cpp  WLReaderBem.h  WLReaderDIP.cpp  WLReaderDIP.h  WLReaderELC.cpp  WLReaderELC.h  WLReaderExperiment.cpp  WLReaderExperiment.h  WLReaderFIFF.cpp  WLReaderFIFF.h  WLReaderGeneric.cpp  WLReaderGeneric.h  WLReaderHpiInfo.cpp  WLReaderHpiInfo.h  WLReaderIsotrak.cpp  WLReaderIsotrak.h  WLReaderLeadfield.cpp  WLReaderLeadfield.h  WLReaderMAT.cpp  WLReaderMAT.h  WLReaderMatMab.cpp  WLReaderMatMab.h  WLReaderSourceSpace.cpp  WLReaderSourceSpace.h  WLReaderVOL.cpp  WLReaderVOL.h  WLRtClient.cpp  WLRtClient.h  WLWriterMAT.cpp  WLWriterMAT.h  (+1 more)
src/core/kernel/: WLModuleInputDataCollection.cpp  WLModuleInputDataCollection.h  WLModuleInputDataRingBuffer.cpp  WLModuleInputDataRingBuffer.h  WLModuleOutputDataCollectionable.cpp  WModuleEMMView.cpp  WModuleEMMView.h
src/core/module/: WLConstantsModule.h  WLDataModuleInputNull.cpp  WLDataModuleInputNull.h  WLEMMCommandProcessor.cpp  WLEMMCommandProcessor.h  WLModuleDrawable.cpp  WLModuleDrawable.h  WLModuleInputDataCollection.cpp  WLModuleInputDataCollection.h  WLModuleInputDataRingBuffer.cpp  WLModuleInputDataRingBuffer.h  WLModuleOutputDataCollectionable.cpp  WLModuleOutputDataCollectionable.h  _DOC_.h
src/core/preprocessing/: WLPreprocessing.cpp  WLPreprocessing.h  WLWindowFunction.cpp  WLWindowFunction.h  WLWindowsFunction.cpp  WLWindowsFunction.h  _DOC_.h
src/core/test/: WLaBPIntegrationTest_test.h
src/core/util/: WLBoundCalculator.cpp  WLBoundCalculator.h  WLCudaMacros.cpp  WLCudaMacros.h  WLCudaMacrosNVCC.c  WLCudaMacrosNVCC.h  WLDefines.cpp  WLDefines.h  WLGeometry.cpp  WLGeometry.h  WLLifetimeProfiler.cpp  WLLifetimeProfiler.h  WLProfiler.cpp  WLProfiler.h  WLRingBuffer.cpp  WLRingBuffer.h  WLTimeProfiler.cpp  WLTimeProfiler.h  _DOC_.h
src/modules/: CMakeLists.txt  _DOC_.h  modules-base.toolbox  modules-dependencies.cmake  modules-deprecated.toolbox  modules-development.toolbox
src/modules/alignment/: CMakeLists.txt  WAlignment.cpp  WAlignment.h  WEEGSkinAlignment.cpp  WEEGSkinAlignment.h  WMAlignment.cpp  WMAlignment.h  WMAlignment.xpm
src/modules/beamforming/: Beam1.cpp  CMakeLists.txt  WBeamforming.cpp  WBeamforming.h  WBeamformingCPU.cpp  WBeamformingCPU.h  WBeamformingCuda.cpp  WBeamformingCuda.h  WMBeamforming.cpp  WMBeamforming.h  WMBeamforming.xpm  help.cpp  hh  matrix  matrix.cpp  na  naa  tri  tri.cpp  xpm.txt
src/modules/codeSnippets/: WMCodeSnippets.cpp  WMCodeSnippets.h  WMCodeSnippets.xpm
src/modules/dataAppender/: WMDataAppender.cpp  WMDataAppender.h
src/modules/emMeasurement/: CMakeLists.txt  WMEmMeasurement.cpp  WMEmMeasurement.h  WMEmMeasurement.xpm
src/modules/emdWriter/: WMEmdWriter.cpp  WMEmdWriter.h  WMEmdWriter.xpm
src/modules/emmGenerator/: WMEMMGenerator.cpp  WMEMMGenerator.h  WMEMMGenerator.xpm
src/modules/emmMeasurement/: WMemmMeasurement.cpp  WMemmMeasurement.h  WMemmMeasurement.xpm
src/modules/emmSimulator/: WMEMMSimulator.cpp  WMEMMSimulator.h  WPacketizer.cpp  WPacketizer.h  WPacketizerEMM.cpp  WPacketizerEMM.h
src/modules/emmStreaming/: WMEMMSimulator.xpm  WMEMMStreaming.cpp  WMEMMStreaming.h  WPacketizer.cpp  WPacketizer.h  WPacketizerEMM.cpp  WPacketizerEMM.h
src/modules/epochAveraging/: CMakeLists.txt  WEpochAveraging.cpp  WEpochAveraging.h  WEpochAveragingMoving.cpp  WEpochAveragingMoving.h  WEpochAveragingTotal.cpp  WEpochAveragingTotal.h  WMEpochAveraging.cpp  WMEpochAveraging.h  WMEpochAveraging.xpm
src/modules/epochRejection/: CMakeLists.txt  WBadChannelManager.cpp  WBadChannelManager.h  WBadEpoch.cpp  WBadEpoch.h  WBadEpochManager.cpp  WBadEpochManager.h  WEpochRejection.cpp  WEpochRejection.h  WEpochRejectionSingle.cpp  WEpochRejectionSingle.h  WEpochRejectionTotal.cpp  WEpochRejectionTotal.h  WGenericCircularBuffer.cpp  WGenericCircularBuffer.h  WGenericList.cpp  WGenericList.h  WGenericMap.cpp  WGenericMap.h  WMEpochRejection.cpp  WMEpochRejection.h  WMEpochRejection.xpm  WThreshold.cpp  WThreshold.h  WThresholdMEG.cpp  WThresholdMEG.h  WThresholdParser.cpp  WThresholdParser.h
src/modules/epochSeparation/: CMakeLists.txt  WEpochSeparation.cpp  WEpochSeparation.h  (+3 more)
(+736 files in other folders)
